8232871: Host Locale Provider on Mac does not return translated values of Japanese calendar

Reviewed-by: bchristi