test/jdk/java/util/Locale/LocaleProvidersRun.java
@@ -25,7 +25,7 @@
  * @test
  * @bug 6336885 7196799 7197573 7198834 8000245 8000615 8001440 8008577
  *      8010666 8013086 8013233 8013903 8015960 8028771 8054482 8062006
- *      8150432 8215913 8220227 8228465
+ *      8150432 8215913 8220227 8228465 8232871
  * @summary tests for "java.locale.providers" system property
  * @library /test/lib
  * @build LocaleProviders
@@ -156,6 +156,9 @@ public class LocaleProvidersRun {
 
         //testing 8228465 fix. (Windows only)
         testRun("HOST", "bug8228465Test", "", "", "");
+
+        //testing 8232871 fix. (macOS only)
+        testRun("HOST", "bug8232871Test", "", "", "");
     }
 
     private static void testRun(String prefList, String methodName,
